--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,13 @@
     --subtitle-text-color: #757575;
     --accent-text-color: #2196F3;
     --main-title-color: #FFFFFF;
+    --background-color-black: #2F303A;
+    --activ-button-color: #188CE8;
+    --second-accent-color:rgba(255, 255, 255, 0.6);
+    --button-color: #F5F4FA;
 }
 body{
-    background-color: F5F5F5;
+    background-color: var(--main-title-color)
     color: var(--title-text-color);
     font-family: 'Roboto', sans-serif;
 }
@@ -14,6 +18,9 @@ ul {
 }
 .auto{
     cursor: pointer;
+}
+.header.current {
+    color: var(--accent-text-color);
 }
 .logo{
     color:var(--title-text-color);
@@ -24,18 +31,14 @@ ul {
     letter-spacing: 0.03em;
     text-decoration: none;
 }
-.logo:hover,.logo:focus{
-    color: var(--accent-text-color);
-}
 .logo>.blue,
 .header>.blue,
 .blue{
     color:var(--accent-text-color);
     text-decoration: none;
 }
-.blue:hover,.blue:focus,
 .contact:hover,.contact:focus{
-    color: var(--title-text-color);
+    color: var(--accent-text-color);
 }
 .header{
     color: var(--title-text-color);
@@ -43,14 +46,10 @@ ul {
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
-        text-decoration: none;
 }
 .header:hover,
 .header:focus {
 color: var(--accent-text-color);
-}
-a >.header:visited {
-    color: var(--accent-text-color);
 }
 .post-blue{
     color: var(--accent-text-color);
@@ -61,10 +60,10 @@ a >.header:visited {
         text-decoration: none;
 }
 .post-blue:hover,.post-blue:focus{
-    color:var(--title-text-color)
+    color: var(--accent-text-color);
 }
 .contact{
-    color: var(--subtitle-text-color);
+    color: var(--accent-text-color)
     font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
@@ -72,7 +71,7 @@ a >.header:visited {
         text-decoration: none;
 }
 .hero{
-    background-color: #2F303A;;
+    background-color: var(--background-color-black);
     color: var(--main-title-color);
     font-weight: 900;
         font-size: 44px;
@@ -86,8 +85,13 @@ a >.header:visited {
     color: var(--main-title-color);
     font-weight: 700;
         font-size: 16px;
-        line-height: 1.8;
+        line-height: 1.81;
         letter-spacing: 0.06em;
+        font-family: inherit;
+}
+.hero .btn:focus,
+.hero .btn:hover{
+    background-color: var(--activ-button-color);
 }
 .list-title{
     font-weight: 700;
@@ -98,7 +102,7 @@ a >.header:visited {
 .list-text{
     color: var(--subtitle-text-color);
         font-size: 14px;
-        line-height: 1.7;
+        line-height: 1.71;
         letter-spacing: 0.03em;
 }
 .main-title{
@@ -121,7 +125,7 @@ a >.header:visited {
         letter-spacing: 0.03em;
 }
 .footer{
-    background-color: #2F303A;;
+    background-color: var(--background-color-black);
 }
 .footer-logo{
     color: var(--main-title-color);
@@ -131,18 +135,16 @@ a >.header:visited {
         letter-spacing: 0.03em;
         text-decoration: none;
 }
-.footer-logo:hover,.footer:focus{
-    color: var(--accent-text-color);
-}
 .footer-address{
     color: var(--main-title-color);
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
         text-decoration: none;
+        font-style: normal;
 }
 .footer-contact{
-    color: rgba(100, 100, 100, 60);
+    color: var(--second-accent-color);
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
@@ -151,36 +153,39 @@ a >.header:visited {
 .footer-address:focus,.footer-address:hover,.footer-contact:hover,.footer-contact:focus{
     color: var(--accent-text-color);
 }
-.nav-btn{
-    background-color: #F5F4FA;
+.visually-hidden {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+}
+.liste-btn{
+    background-color: var(--button-color);
     font-weight: 500;
         font-size: 16px;
-        line-height: 1.6;
+        line-height: 1.61;
         letter-spacing: 0.03em;
-        text-decoration: none;
+        font-family: inherit;
 }
 .project-subtitle{
     color: var(--title-text-color);
     font-weight: 700;
         font-size: 18px;
-        line-height: 2;
+        line-height: 2.11;
         letter-spacing: 0.06em;
         text-decoration: none;
-}
-.project-subtitle:hover,
-.project-subtitle:focus{
-    color: var(--accent-text-color);
 }
 .project-copy{
     color: var(--subtitle-text-color);
         font-size: 16px;
-        line-height: 1.8;
+        line-height: 1.81;
         letter-spacing: 0.03em;
         text-decoration: none;
 }
 
-.nav-btn:hover,
-.nav-btn:focus{
+.liste-btn:hover,
+.liste-btn:focus{
     background-color: var(--accent-text-color);
     color: var(--main-title-color);
 }
