--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --activ-button-color: #188CE8;
     --second-accent-color:rgba(255, 255, 255, 0.6);
     --button-color: #F5F4FA;
+    --border-color: #EEEEEE;
 }
 body{
     background-color: var(--main-title-color);
@@ -15,14 +16,49 @@ body{
 }
 ul {
     list-style: none;
-}
+    margin: 0;
 
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
 .auto{
     cursor: pointer;
 }
 .header.current {
     color: var(--accent-text-color);
 }
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.top-container {
+   display: flex;
+   align-items: center;
+   flex-direction: row;
+   height: 80px;
+}
+
+.top-portfolio{
+    margin-bottom: 94px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    
+}
+
 .logo{
     color:var(--title-text-color);
     font-family: 'Raleway', sans-serif;
@@ -31,92 +67,197 @@ ul {
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
+
+    margin-right: 93px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
+
 .logo>.blue,
 .header>.blue,
 .blue{
     color:var(--accent-text-color);
     text-decoration: none;
 }
+
 .contact:hover,.contact:focus{
     color: var(--accent-text-color);
 }
+
 .header{
+display: flex;
+padding-left: 0px;
     color: var(--title-text-color);
     font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
         text-decoration: none;
-       
+
+        padding-top: 32px;
+        padding-bottom: 32px;
+    
 }
+
+.header li:not(:last-child){
+    padding-right: 50px;
+}
+
 .header:hover,
 .header:focus {
 color: var(--accent-text-color);
 }
-.post-blue{
-    color: var(--accent-text-color);
-    font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        text-decoration: none;
+
+.info {
+    display: flex;
+        flex-direction: row;
+        margin-left: 344px;
+        padding-left: 0px;
+       
 }
-.post-blue:hover,.post-blue:focus{
-    color: var(--accent-text-color);
-}
+
 .contact{
-    color: var(--subtitle-text-color);
-    font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        text-decoration: none;
+ display: block;
+ min-width: 135px;
+ padding-left: 0px;
+display: flex;
+justify-content: flex-end;
+padding-top: 32px;
+padding-bottom: 32px;
+
+color: var(--subtitle-text-color);
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.02em;
+
+       
 }
-.hero{
+
+.info li:not(:last-child) {
+    margin-right: 50px;
+}
+.container-hero{
+    height: 600px;
     background-color: var(--background-color-black);
-    color: var(--main-title-color);
-    font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
 }
-.hero .btn{
+
+.hero-title{
+color: var(--main-title-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    max-width: 696px;
+    padding-top: 200px;
+    padding-bottom: 30px;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hero .btn {
     background-color: var(--accent-text-color);
     color: var(--main-title-color);
     font-weight: 700;
-        font-size: 16px;
-        line-height: 1.87;
-        letter-spacing: 0.06em;
-        font-family: inherit;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    font-family: inherit;
+    text-align: center;
+
+      width: 216px;
+        height: 50px;
+        border-radius: 4px;
+        margin-left: 462px;
+        margin-right: 462px;
+       margin-bottom: 200px;
 }
+       
 .hero .btn:focus,
 .hero .btn:hover{
     background-color: var(--activ-button-color);
+}
+
+.list{
+    display: flex;
+    direction: row;
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
+.list li:not(:first-child){
+    margin-left: 30px;
 }
 .list-title{
     font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.03em;
+
+        padding-bottom: 10px;
 }
 .list-text{
     color: var(--subtitle-text-color);
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
+        text-align: left;
+
+        min-width: 270px;
 }
-.team-items{
-background-color: var(--button-color);
+.container-do{
+    display: block;
+    padding-bottom: 94px;
 }
-.main-title{
+.main-title {
     font-weight: 700;
-        font-size: 36px;
-        line-height: 1.18;
-        text-align: center;
-        letter-spacing: 0.03em;
+    font-size: 36px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    padding-bottom: 50px;
+}
+.img-list{
+    display: flex;
+        flex-direction: row;
+        padding-left: 0px;
+        padding-bottom: 94px;
+}
+.img-list li:not(:first-child){
+    padding-left: 30px;
+}
+.team-items {
+    background-color: var(--button-color);
+    height: 648px;
+}
+
+.main-title-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    padding-top: 94px;
+    margin-bottom: 50px;
+}
+.container-team{
+    height: 368px;
+    display: flex;
+    flex-direction: row;
+    padding-left: 0px;
+    padding-bottom: 94px;
+}
+.container-team li:not(:last-child){
+    margin-right: 30px;
+}
+
+.icon{
+    margin-bottom: 30px;
 }
 .main-subtitle{
     color: var(--title-text-color);
@@ -124,15 +265,25 @@ background-color: var(--button-color);
         font-size: 16px;
         line-height: 1.19;
         letter-spacing: 0.03em;
+        padding-bottom: 16px;
 }
 .main-desc{
     color: var(--subtitle-text-color);
             font-size: 16px;
             line-height: 1.19px;
             letter-spacing: 0.03em;
+            height: 19px;
+            
+            
+
 }
 .footer{
     background-color: var(--background-color-black);
+
+        height: 252px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+
 }
 .footer-logo{
     color: var(--main-title-color);
@@ -141,7 +292,7 @@ background-color: var(--button-color);
         font-size: 26px;
         line-height: 1.19;
         letter-spacing: 0.03em;
-        text-decoration: none;
+        text-decoration: none;    
 }
 .footer-address{
     color: var(--main-title-color);
@@ -151,6 +302,7 @@ background-color: var(--button-color);
         text-decoration: none;
         font-style: normal;
 }
+
 .footer-contact{
     color: var(--second-accent-color);
         font-size: 14px;
@@ -158,6 +310,15 @@ background-color: var(--button-color);
         letter-spacing: 0.03em;
         text-decoration: none;
         font-style: normal;
+        
+}
+
+.container-footer{
+padding-left: 0px;
+padding-top: 20px;
+}
+.container-footer li:not(:first-child){
+    padding-top: 9px;
 }
 .footer-address:focus,.footer-address:hover,.footer-contact:hover,.footer-contact:focus{
     color: var(--accent-text-color);
@@ -174,6 +335,23 @@ background-color: var(--button-color);
     margin: -1px;
 
 }
+.liste{
+    height: 1360px;
+    margin-bottom: 94px;
+}
+.container-liste-btn{
+    height: 54px;
+    width: 575px;
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+.container-liste-btn li:not(:first-child){
+    padding-left: 8px;
+}
+
 .liste-btn{
     background-color: var(--button-color);
     font-weight: 500;
@@ -181,6 +359,21 @@ background-color: var(--button-color);
         line-height: 1.63;
         letter-spacing: 0.03em;
         font-family: inherit;
+        border-radius: 4px;
+        border-color: transparent;
+
+}
+.project-liste{
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0px;
+}
+.project-liste li:nth-child(3n){
+    margin-right: 0px;
+}
+.project-liste li{
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 .project-subtitle{
     color: var(--title-text-color);
@@ -189,12 +382,17 @@ background-color: var(--button-color);
         line-height: 2;
         letter-spacing: 0.06em;
         
+        margin-bottom: 4px;
+}
+.project-icon{
+    margin-bottom: 20px;
 }
 .project-copy{
     color: var(--subtitle-text-color);
         font-size: 16px;
         line-height: 1.87;
         letter-spacing: 0.03em;
+        margin-bottom: 20px;
         
 }
 .liste-btn:hover,
