--- a/css/styles.css
+++ b/css/styles.css
@@ -43,20 +43,32 @@ p {
     margin-right: auto;
     
 }
+
+.block{
+    display: block;
+}
+
+.section{
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
+
 .top-container {
    display: flex;
    align-items: center;
    flex-direction: row;
-   height: 80px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .top-portfolio{
-    margin-bottom: 94px;
-    height: 80px;
     display: flex;
     align-items: center;
     flex-direction: row;
+    padding-top: 32px;
+    padding-bottom: 32px;
     
+    border: 1px solid var(--border-color);
 }
 
 .logo{
@@ -69,8 +81,6 @@ p {
     text-decoration: none;
 
     margin-right: 93px;
-    padding-top: 32px;
-    padding-bottom: 32px;
 }
 
 .logo>.blue,
@@ -85,22 +95,19 @@ p {
 }
 
 .header{
-display: flex;
-padding-left: 0px;
+    display: flex;
+    padding-left: 0px;
+
     color: var(--title-text-color);
     font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        text-decoration: none;
-
-        padding-top: 32px;
-        padding-bottom: 32px;
-    
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;   
 }
 
 .header li:not(:last-child){
-    padding-right: 50px;
+    margin-right: 50px;
 }
 
 .header:hover,
@@ -110,40 +117,44 @@ color: var(--accent-text-color);
 
 .info {
     display: flex;
-        flex-direction: row;
-        margin-left: 344px;
-        padding-left: 0px;
-       
+    flex-direction: row;
+    margin-left: 344px;
+    padding-left: 0px;
 }
 
 .contact{
- display: block;
- min-width: 135px;
- padding-left: 0px;
-display: flex;
-justify-content: flex-end;
-padding-top: 32px;
-padding-bottom: 32px;
+    display: block;
+    min-width: 135px;
+    padding-left: 0px;
+    display: flex;
+    justify-content: flex-end;
 
-color: var(--subtitle-text-color);
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
 
-       
+    color: var(--subtitle-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;     
 }
 
 .info li:not(:last-child) {
     margin-right: 50px;
 }
+
 .container-hero{
-    height: 600px;
     background-color: var(--background-color-black);
 }
 
 .hero-title{
-color: var(--main-title-color);
+    max-width: 696px;
+    padding-top: 200px;
+    padding-bottom: 30px;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+
+
+    color: var(--main-title-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -151,15 +162,18 @@ color: var(--main-title-color);
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
-    max-width: 696px;
-    padding-top: 200px;
-    padding-bottom: 30px;
-    flex-wrap: wrap;
-    margin-left: auto;
-    margin-right: auto;
+   
 }
 
 .hero .btn {
+    width: 216px;
+    height: 50px;
+    border-radius: 4px;
+    margin-left: 462px;
+    margin-right: 462px;
+    margin-bottom: 200px;
+
+
     background-color: var(--accent-text-color);
     color: var(--main-title-color);
     font-weight: 700;
@@ -167,14 +181,7 @@ color: var(--main-title-color);
     line-height: 1.87;
     letter-spacing: 0.06em;
     font-family: inherit;
-    text-align: center;
-
-      width: 216px;
-        height: 50px;
-        border-radius: 4px;
-        margin-left: 462px;
-        margin-right: 462px;
-       margin-bottom: 200px;
+    text-align: center;  
 }
        
 .hero .btn:focus,
@@ -185,32 +192,32 @@ color: var(--main-title-color);
 .list{
     display: flex;
     direction: row;
-    padding-bottom: 94px;
-    padding-top: 94px;
 }
+
 .list li:not(:first-child){
     margin-left: 30px;
 }
+
 .list-title{
     font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
 
-        padding-bottom: 10px;
+    padding-bottom: 10px;
 }
+
 .list-text{
     color: var(--subtitle-text-color);
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        text-align: left;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    text-align: left;
 
-        min-width: 270px;
+    min-width: 270px;
 }
 .container-do{
     display: block;
-    padding-bottom: 94px;
 }
 .main-title {
     font-weight: 700;
@@ -219,17 +226,19 @@ color: var(--main-title-color);
     text-align: center;
     letter-spacing: 0.03em;
 
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 }
+
 .img-list{
     display: flex;
-        flex-direction: row;
-        padding-left: 0px;
-        padding-bottom: 94px;
+    flex-direction: row;
+    padding-left: 0px;
 }
+
 .img-list li:not(:first-child){
-    padding-left: 30px;
+    margin-left: 30px;
 }
+
 .team-items {
     background-color: var(--button-color);
     height: 648px;
@@ -242,87 +251,95 @@ color: var(--main-title-color);
     text-align: center;
     letter-spacing: 0.03em;
 
-    padding-top: 94px;
     margin-bottom: 50px;
 }
+
 .container-team{
-    height: 368px;
     display: flex;
     flex-direction: row;
     padding-left: 0px;
-    padding-bottom: 94px;
 }
+
 .container-team li:not(:last-child){
     margin-right: 30px;
 }
 
-.icon{
-    margin-bottom: 30px;
+.container-team > li{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
+
+.icon {
+    margin-bottom: 20px;
+}
+
 .main-subtitle{
     color: var(--title-text-color);
     font-weight: 500;
         font-size: 16px;
         line-height: 1.19;
         letter-spacing: 0.03em;
-        padding-bottom: 16px;
+        text-align: center;
+        margin-bottom: 16px;
 }
+
 .main-desc{
     color: var(--subtitle-text-color);
             font-size: 16px;
             line-height: 1.19px;
-            letter-spacing: 0.03em;
-            height: 19px;
-            
-            
-
+            letter-spacing: 0.03em;  
+            text-align: center;
+            margin-bottom: 30px;  
 }
+
 .footer{
     background-color: var(--background-color-black);
 
-        height: 252px;
-        padding-top: 60px;
-        padding-bottom: 60px;
-
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
+
 .footer-logo{
     color: var(--main-title-color);
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-        letter-spacing: 0.03em;
-        text-decoration: none;    
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: none;    
 }
 .footer-address{
     color: var(--main-title-color);
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        text-decoration: none;
-        font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    font-style: normal;
 }
 
 .footer-contact{
     color: var(--second-accent-color);
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        text-decoration: none;
-        font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    font-style: normal;
         
 }
 
 .container-footer{
-padding-left: 0px;
-padding-top: 20px;
+    padding-left: 0px;
+    margin-top: 20px;
 }
+
 .container-footer li:not(:first-child){
-    padding-top: 9px;
+    margin-top: 9px;
 }
+
 .footer-address:focus,.footer-address:hover,.footer-contact:hover,.footer-contact:focus{
     color: var(--accent-text-color);
 }
+
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -333,14 +350,9 @@ padding-top: 20px;
     width: 1px;
     height: 1px;
     margin: -1px;
+}
 
-}
-.liste{
-    height: 1360px;
-    margin-bottom: 94px;
-}
 .container-liste-btn{
-    height: 54px;
     width: 575px;
     display: flex;
     flex-direction: row;
@@ -348,58 +360,70 @@ padding-top: 20px;
     margin-right: auto;
     margin-bottom: 50px;
 }
+
 .container-liste-btn li:not(:first-child){
-    padding-left: 8px;
+    margin-left: 8px;
 }
 
 .liste-btn{
     background-color: var(--button-color);
     font-weight: 500;
-        font-size: 16px;
-        line-height: 1.63;
-        letter-spacing: 0.03em;
-        font-family: inherit;
-        border-radius: 4px;
-        border-color: transparent;
+    font-size: 16px;
+    line-height: 1.63;
+    letter-spacing: 0.03em;
+    font-family: inherit;
+
+    border-radius: 4px;
+    border-color: transparent;
 
 }
+
 .project-liste{
     display: flex;
     flex-wrap: wrap;
     padding-left: 0px;
 }
+
 .project-liste li:nth-child(3n){
     margin-right: 0px;
 }
+
 .project-liste li{
     margin-right: 30px;
     margin-bottom: 30px;
 }
+
 .project-subtitle{
     color: var(--title-text-color);
     font-weight: 700;
-        font-size: 18px;
-        line-height: 2;
-        letter-spacing: 0.06em;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
         
-        margin-bottom: 4px;
+     margin-bottom: 4px;
 }
-.project-icon{
-    margin-bottom: 20px;
-}
+  
+
 .project-copy{
     color: var(--subtitle-text-color);
-        font-size: 16px;
-        line-height: 1.87;
-        letter-spacing: 0.03em;
-        margin-bottom: 20px;
-        
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.03em;
 }
+
+.project-border{
+    border-right: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
+    padding: 20px 24px;
+}
+
 .liste-btn:hover,
 .liste-btn:focus{
     background-color: var(--accent-text-color);
     color: var(--main-title-color);
 }
+
 a {
     text-decoration: none;
 }
