--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ color: var(--accent-text-color);
     line-height: 1.14;
     letter-spacing: 0.03em;
 
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .list-text{
