--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ p {
 .header.current {
     color: var(--accent-text-color);
 }
+
 .container {
     width: 1200px;
     padding-left: 15px;
@@ -49,26 +50,22 @@ p {
 }
 
 .section{
-    padding-bottom: 94px;
-    padding-top: 94px;
+    padding-bottom: 47px;
+    padding-top: 47px;
 }
 
-.top-container {
+.top {
    display: flex;
    align-items: center;
    flex-direction: row;
-    padding-top: 32px;
-    padding-bottom: 32px;
 }
 
 .top-portfolio{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    
-    border: 1px solid var(--border-color);
+ border-bottom: 1px solid var(--border-color);
+ display: flex;
+ align-items: center;
+ flex-direction: row;
+
 }
 
 .logo{
@@ -81,6 +78,7 @@ p {
     text-decoration: none;
 
     margin-right: 93px;
+
 }
 
 .logo>.blue,
@@ -110,6 +108,11 @@ p {
     margin-right: 50px;
 }
 
+.header a{
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
 .header:hover,
 .header:focus {
 color: var(--accent-text-color);
@@ -124,11 +127,9 @@ color: var(--accent-text-color);
 
 .contact{
     display: block;
-    min-width: 135px;
-    padding-left: 0px;
+    min-width: 122px;
     display: flex;
     justify-content: flex-end;
-
 
     color: var(--subtitle-text-color);
     font-weight: 500;
@@ -137,21 +138,30 @@ color: var(--accent-text-color);
     letter-spacing: 0.02em;     
 }
 
+.info a{
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
 .info li:not(:last-child) {
     margin-right: 50px;
 }
+.hero{
+background-color: var(--background-color-black);
 
-.container-hero{
-    background-color: var(--background-color-black);
+padding-bottom: 200px;
+padding-top: 200px;
+text-align: center;
+
 }
 
 .hero-title{
     max-width: 696px;
-    padding-top: 200px;
-    padding-bottom: 30px;
+    
     flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
 
 
     color: var(--main-title-color);
@@ -166,12 +176,8 @@ color: var(--accent-text-color);
 }
 
 .hero .btn {
-    width: 216px;
-    height: 50px;
     border-radius: 4px;
-    margin-left: 462px;
-    margin-right: 462px;
-    margin-bottom: 200px;
+    border-color: transparent;
 
 
     background-color: var(--accent-text-color);
@@ -189,6 +195,10 @@ color: var(--accent-text-color);
     background-color: var(--activ-button-color);
 }
 
+.list-section{
+    padding-top: 94px;
+    padding-bottom: 47px;
+}
 .list{
     display: flex;
     direction: row;
@@ -216,9 +226,7 @@ color: var(--accent-text-color);
 
     min-width: 270px;
 }
-.container-do{
-    display: block;
-}
+
 .main-title {
     font-weight: 700;
     font-size: 36px;
@@ -235,13 +243,20 @@ color: var(--accent-text-color);
     padding-left: 0px;
 }
 
+.team-border{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    padding: 30px 61px;
+}
+
 .img-list li:not(:first-child){
     margin-left: 30px;
 }
 
 .team-items {
     background-color: var(--button-color);
-    height: 648px;
+    padding-bottom: 94px;
+    width: 100%;
 }
 
 .main-title-team {
@@ -259,18 +274,8 @@ color: var(--accent-text-color);
     flex-direction: row;
     padding-left: 0px;
 }
-
 .container-team li:not(:last-child){
     margin-right: 30px;
-}
-
-.container-team > li{
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
-
-.icon {
-    margin-bottom: 20px;
 }
 
 .main-subtitle{
@@ -280,7 +285,8 @@ color: var(--accent-text-color);
         line-height: 1.19;
         letter-spacing: 0.03em;
         text-align: center;
-        margin-bottom: 16px;
+        height: 19px;
+        margin-bottom: 10px;
 }
 
 .main-desc{
@@ -288,8 +294,12 @@ color: var(--accent-text-color);
             font-size: 16px;
             line-height: 1.19px;
             letter-spacing: 0.03em;  
-            text-align: center;
-            margin-bottom: 30px;  
+            height: 19px;
+    
+            display: flex;
+            align-items: center;
+            justify-content: center;
+             
 }
 
 .footer{
@@ -297,6 +307,7 @@ color: var(--accent-text-color);
 
     padding-top: 60px;
     padding-bottom: 60px;
+    text-align: left;
 }
 
 .footer-logo{
@@ -306,7 +317,9 @@ color: var(--accent-text-color);
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    text-decoration: none;    
+    text-decoration: none;
+    padding-right: 0px; 
+   
 }
 .footer-address{
     color: var(--main-title-color);
@@ -315,6 +328,8 @@ color: var(--accent-text-color);
     letter-spacing: 0.03em;
     text-decoration: none;
     font-style: normal;
+    padding-right: 0px;
+    
 }
 
 .footer-contact{
@@ -324,12 +339,13 @@ color: var(--accent-text-color);
     letter-spacing: 0.03em;
     text-decoration: none;
     font-style: normal;
-        
+    padding-right: 0px;
 }
 
 .container-footer{
     padding-left: 0px;
-    margin-top: 20px;
+    padding-right: 0px;
+    padding-top: 20px;
 }
 
 .container-footer li:not(:first-child){
@@ -339,7 +355,10 @@ color: var(--accent-text-color);
 .footer-address:focus,.footer-address:hover,.footer-contact:hover,.footer-contact:focus{
     color: var(--accent-text-color);
 }
-
+.liste {
+padding-top: 94px;
+padding-bottom: 94px;
+}
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -353,14 +372,16 @@ color: var(--accent-text-color);
 }
 
 .container-liste-btn{
-    width: 575px;
+    justify-content: center;
     display: flex;
-    flex-direction: row;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
+    padding-left: 0px;
 }
-
+.container-liste-btn button{
+    padding: 6px 22px;
+}
 .container-liste-btn li:not(:first-child){
     margin-left: 8px;
 }
@@ -391,6 +412,9 @@ color: var(--accent-text-color);
 .project-liste li{
     margin-right: 30px;
     margin-bottom: 30px;
+}
+.project-liste li:nth-last-child(-n + 3){
+    margin-bottom: 0px;
 }
 
 .project-subtitle{
