--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,9 @@ p {
     padding-bottom: 47px;
     padding-top: 47px;
 }
-
+.border{
+    border-bottom : 1px solid var(--border-color);
+}
 .top {
    display: flex;
    align-items: center;
@@ -61,7 +63,6 @@ p {
 }
 
 .top-portfolio{
- border-bottom: 1px solid var(--border-color);
  display: flex;
  align-items: center;
  flex-direction: row;
