--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body{
 ul {
     list-style: none;
     margin: 0;
+    padding-left: 0px;
 
 }
 h1,
@@ -31,7 +32,7 @@ p {
 .auto{
     cursor: pointer;
 }
-.header.current {
+.nav-item.current {
     color: var(--accent-text-color);
 }
 
@@ -50,8 +51,7 @@ p {
 }
 
 .section{
-    padding-bottom: 47px;
-    padding-top: 47px;
+    padding-bottom: 94px;
 }
 .border{
     border-bottom : 1px solid var(--border-color);
@@ -93,45 +93,44 @@ p {
     color: var(--accent-text-color);
 }
 
-.header{
+.nav-list{
     display: flex;
     padding-left: 0px;
 
-    color: var(--title-text-color);
+    
+}
+.nav-item{
+color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;   
+    text-decoration: none;
 }
 
-.header li:not(:last-child){
+.nav-list li:not(:last-child){
     margin-right: 50px;
 }
 
-.header a{
+.nav-list a{
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.header:hover,
-.header:focus {
+.nav-item:hover,
+.nav-item:focus {
 color: var(--accent-text-color);
 }
 
 .info {
     display: flex;
     flex-direction: row;
-    margin-left: 344px;
-    padding-left: 0px;
+    margin-left: auto;
 }
 
 .contact{
     display: block;
-    min-width: 122px;
-    display: flex;
-    justify-content: flex-end;
-
+    
     color: var(--subtitle-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -189,6 +188,7 @@ text-align: center;
     letter-spacing: 0.06em;
     font-family: inherit;
     text-align: center;  
+    padding: 10px 32px;
 }
        
 .hero .btn:focus,
@@ -227,6 +227,9 @@ text-align: center;
 
     min-width: 270px;
 }
+.work-section{
+    padding-top: 47px;
+}
 
 .main-title {
     font-weight: 700;
@@ -247,7 +250,7 @@ text-align: center;
 .team-border{
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    padding: 30px 61px;
+    padding: 30px 0px;
 }
 
 .img-list li:not(:first-child){
@@ -256,7 +259,7 @@ text-align: center;
 
 .team-items {
     background-color: var(--button-color);
-    padding-bottom: 94px;
+    padding-top: 94px;
     width: 100%;
 }
 
@@ -286,7 +289,6 @@ text-align: center;
         line-height: 1.19;
         letter-spacing: 0.03em;
         text-align: center;
-        height: 19px;
         margin-bottom: 10px;
 }
 
@@ -295,11 +297,9 @@ text-align: center;
             font-size: 16px;
             line-height: 1.19px;
             letter-spacing: 0.03em;  
-            height: 19px;
-    
-            display: flex;
-            align-items: center;
-            justify-content: center;
+           
+           text-align: center;
+            
              
 }
 
@@ -343,10 +343,12 @@ text-align: center;
     padding-right: 0px;
 }
 
+.address{
+margin-top: 20px;
+}
 .container-footer{
     padding-left: 0px;
     padding-right: 0px;
-    padding-top: 20px;
 }
 
 .container-footer li:not(:first-child){
@@ -404,16 +406,10 @@ padding-bottom: 94px;
     display: flex;
     flex-wrap: wrap;
     padding-left: 0px;
+    gap: 30px;
 }
 
-.project-liste li:nth-child(3n){
-    margin-right: 0px;
-}
 
-.project-liste li{
-    margin-right: 30px;
-    margin-bottom: 30px;
-}
 .project-liste li:nth-last-child(-n + 3){
     margin-bottom: 0px;
 }
