--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --second-accent-color:rgba(255, 255, 255, 0.6);
     --button-color: #F5F4FA;
     --border-color: #EEEEEE;
+    --svg-color-grey:#afb1b8;
 }
 body{
     background-color: var(--main-title-color);
@@ -91,6 +92,7 @@ p {
 
 .contact:hover,.contact:focus{
     color: var(--accent-text-color);
+    fill: var(--accent-text-color);
 }
 
 .nav-list{
@@ -106,6 +108,8 @@ color: var(--title-text-color);
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
+    display: block;
 }
 
 .nav-list li:not(:last-child){
@@ -130,12 +134,17 @@ color: var(--accent-text-color);
 
 .contact{
     display: block;
+    display: flex;
+    align-items: center;
+    gap: 10px;
     
     color: var(--subtitle-text-color);
+    fill: var(--subtitle-text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;     
+    letter-spacing: 0.02em;    
+     
 }
 
 .info a{
@@ -147,7 +156,11 @@ color: var(--accent-text-color);
     margin-right: 50px;
 }
 .hero{
-background-color: var(--background-color-black);
+background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
+background-repeat: no-repeat;
+background-size: 1600px 600px;
+background-position: center;
+
 
 padding-bottom: 200px;
 padding-top: 200px;
@@ -199,22 +212,27 @@ text-align: center;
 .list-section{
     padding-top: 94px;
     padding-bottom: 47px;
+
 }
 .list{
     display: flex;
-    direction: row;
 }
 
 .list li:not(:first-child){
+    background-image: ;
     margin-left: 30px;
 }
+ .list-item-styles{
+    padding: 25px 100px;
+    background-color: var(--button-color);
+ }
 
 .list-title{
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-
+    margin-top: 30px;
     margin-bottom: 10px;
 }
 
@@ -251,6 +269,7 @@ text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     padding: 30px 0px;
+    background-color: var(--main-title-color);
 }
 
 .img-list li:not(:first-child){
@@ -262,7 +281,33 @@ text-align: center;
     padding-top: 94px;
     width: 100%;
 }
+.social-items{
+    margin-top: 16px;
+    display: inline;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  
+}
 
+.social-item-styles{
+    display: flex;
+   
+    width: 44px;
+    height: 44px;
+    padding: 12px 12px;
+    background-color: var(--main-title-color);
+    fill: var(--svg-color-grey);
+    border-radius: 50%;
+   
+}
+.social-item-styles:hover,
+.social-item-styles:focus{
+    background-color: var(--accent-text-color);
+    fill: var(--main-title-color);
+}
 .main-title-team {
     font-weight: 700;
     font-size: 36px;
@@ -277,11 +322,8 @@ text-align: center;
     display: flex;
     flex-direction: row;
     padding-left: 0px;
+    gap: 30px;
 }
-.container-team li:not(:last-child){
-    margin-right: 30px;
-}
-
 .main-subtitle{
     color: var(--title-text-color);
     font-weight: 500;
@@ -295,22 +337,61 @@ text-align: center;
 .main-desc{
     color: var(--subtitle-text-color);
             font-size: 16px;
-            line-height: 1.19px;
+            line-height: 1.19;
             letter-spacing: 0.03em;  
            
            text-align: center;
             
              
 }
+.clients{
+    padding-top: 94px;
+}
+.clients-item-styles{
+    
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    padding: 16px 32px;
+   
+    
+}
+.clients-item-styles:hover,
+.clients-item-styles:focus{
+    border: 1px solid var(--accent-text-color);
+  
+}
+.clients-item{
+width: 170px;
+height: 92px;
+display: inline-flex;
+align-items: center;
+justify-content: center;
+fill: var(--svg-color-grey);
+
+}
+.clients-item:hover,
+.clients-item:focus{
+fill: var(--accent-text-color);
+}
+
+.clients-items{
+    display: flex;
+    gap: 30px;
+}
+
 
 .footer{
     background-color: var(--background-color-black);
 
     padding-top: 60px;
     padding-bottom: 60px;
-    text-align: left;
+   
+    
 }
-
+.footer-container{
+display: flex;
+align-items: baseline;
+}
 .footer-logo{
     color: var(--main-title-color);
     font-family: 'Raleway', sans-serif;
@@ -332,7 +413,12 @@ text-align: center;
     padding-right: 0px;
     
 }
-
+.footer-logo-left{
+    display: flex;
+    justify-content: left;
+    align-items: flex-start;
+    display: inline-block;
+}
 .footer-contact{
     color: var(--second-accent-color);
     font-size: 14px;
@@ -341,6 +427,44 @@ text-align: center;
     text-decoration: none;
     font-style: normal;
     padding-right: 0px;
+}
+
+.footer-text{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+   
+    
+    color: var(--main-title-color);
+}
+.footer-social{
+text-align: left;
+margin-left: 70px;
+}
+
+.footer-items{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.footer-social-styles{
+    display: flex;
+    text-align: center;
+    width: 44px;
+    height: 44px;
+    padding: 12px 12px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+}
+.footer-social-styles:hover,
+.footer-social-styles:focus{
+    background: var(--accent-text-color);
+}
+.footer-social-item{
+    fill: var(--main-title-color);
 }
 
 .address{
@@ -401,17 +525,19 @@ padding-bottom: 94px;
     border-color: transparent;
 
 }
-
+.project-shadow{
+    display: block;
+}
+.project-shadow:hover,
+.project-shadow:focus{
+    border: 1px solid var(--border-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .project-liste{
     display: flex;
     flex-wrap: wrap;
     padding-left: 0px;
     gap: 30px;
-}
-
-
-.project-liste li:nth-last-child(-n + 3){
-    margin-bottom: 0px;
 }
 
 .project-subtitle{
@@ -443,6 +569,7 @@ padding-bottom: 94px;
 .liste-btn:focus{
     background-color: var(--accent-text-color);
     color: var(--main-title-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 a {
